Fixes on mobile footer signup newsletter

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1320,3 +1320,20 @@ input#NewsletterForm--footer:hover, input#NewsletterForm--footer:focus {
   .menu-drawer__inner-submenu .menu-drawer__menu {
     margin-top: 0 !important;
   } */
+
+
+
+/* Mobile Responsive */
+@media (max-width: 767px) {
+  .footer-block--custom_newsletter .footer-block--newsletter h2.footer-block__heading, .footer-block--custom_newsletter .footer-block--newsletter p{
+    text-align: center;
+  }
+  .newsletter-form__field-wrapper .field{
+    display: block;
+  }
+  button#Subscribe{
+    margin: 8px 0;
+    right: 0;
+    width: 100%;
+  }
+}
